fixed text gaps in css

--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ body{
     font-family: Lato;
     font-size: 18px;
     font-weight: 400;
+    margin: 30px 0px 60px 0px;
 }
 
 .email-input {
